--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,10 @@ html {
 
 .page {
   inline-size: 1200px;
-  block-size: 100%;
+  block-size: 100vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   margin: auto;
   color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
