--- a/styles/style.css
+++ b/styles/style.css
@@ -77,7 +77,8 @@ ol {
 
 .result__video {
   width: 100%;
-  max-height: 386px;
+  height: 100%;
+  object-fit: fill;
 }
 
 .search-form {
@@ -90,9 +91,9 @@ ol {
 }
 
 .content__details {
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
+  display: grid;
+  grid-template-rows: 0.5fr 1fr;
+  gap: 26px;
 }
 
 .title {
@@ -133,10 +134,22 @@ ol {
 .content__video-card {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  width: 390px;
+  height: 103px;
+}
+
+.content__video-card-description-container {
+  height: 103px;
+}
+
+.content__video-card:hover  .content__video-card-title , .content__video-card-description {
+  text-decoration: underline;
 }
 
 .content__video-card-thumbnail {
-  max-width: 194px;
+  width: 100%;
+  height: 103px;
+
 }
 
 .content__list-item:not(:nth-last-child(1)) {
@@ -228,13 +241,32 @@ input[type='checkbox'] + span {
   padding: 6px 73.5px;
 }
 
+.search-form__submit-button:focus {
+  outline: none;
+}
+
+.search-form__submit-button:focus-visible {
+  outline: 1px solid #ffffff;
+  outline-offset: 1px;
+}
+
 .more-button {
   width: 100%;
   min-height: 100%;
 }
 
+.more-button:focus {
+  outline: none;
+}
+
+.more-buttonfocus-visible {
+  outline: 1px solid #ffffff;
+  outline-offset: 1px;
+}
+
 .search-form__label:has(:focus-visible) {
   outline: 1px solid #ffffff;
+  outline-offset: 1px ;
 }
 
 .search-form__textfield:focus {
@@ -251,7 +283,7 @@ input[type='checkbox'] + span {
   background: #fff;
 }
 
-.search-form__checkbox-list:hover {
+.search-form__label-text:hover {
   text-decoration: underline;
 }
 
@@ -264,7 +296,11 @@ input[type='checkbox'] + span {
   margin: 2px;
 }
 
-.search-form__checkbox-list {
-  margin-bottom: 5px;
+.content__card-link:focus {
+  outline: none;
 }
 
+.content__card-link:focus-visible {
+  outline: 1px solid #fffafa;
+  outline-offset: -1px;
+}
