--- a/styles/style.css
+++ b/styles/style.css
@@ -166,7 +166,7 @@ fieldset {
 
 .search-form__fieldset-title {
   color: #FFF;
-font-family: Fira Sans Condensed;
+font-family: 'Fira Sans Condensed',sans-serif;
 font-size: 18px;
 font-style: normal;
 font-weight: 400;
@@ -209,7 +209,7 @@ input[type='checkbox'] + span {
   border-top: 1px solid #fff;
   border-bottom: 1px solid #fff;
   color: rgba(255, 255, 255, 0.70);
-  font-family: Fira Sans Condensed;
+  font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
