--- a/styles/style.css
+++ b/styles/style.css
@@ -57,6 +57,8 @@ ol {
   flex-direction: row;
   margin: auto;
   align-items: end;
+  width: 1140px;
+
 }
 
 .result {
@@ -72,13 +74,13 @@ ol {
 .result__video-container {
   width: 100%;
   position: relative;
-  max-height: 386px;
+  height: 386px;
 }
 
 .result__video {
   width: 100%;
   height: 100%;
-  object-fit: fill;
+  object-fit: cover;
 }
 
 .search-form {
@@ -111,7 +113,8 @@ ol {
 }
 
 .content__list {
-    max-height: 298px;
+    height: 298px;
+    width: 399px;
     overflow-y: auto;
     overflow-x: hidden;
     position: relative;
@@ -142,7 +145,7 @@ ol {
   height: 103px;
 }
 
-.content__video-card:hover  .content__video-card-title , .content__video-card-description {
+.content__video-card:hover .content__video-card-title , .content__video-card:hover .content__video-card-description {
   text-decoration: underline;
 }
 
@@ -259,7 +262,7 @@ input[type='checkbox'] + span {
   outline: none;
 }
 
-.more-buttonfocus-visible {
+.more-button:focus-visible {
   outline: 1px solid #ffffff;
   outline-offset: 1px;
 }
@@ -303,4 +306,8 @@ input[type='checkbox'] + span {
 .content__card-link:focus-visible {
   outline: 1px solid #fffafa;
   outline-offset: -1px;
+}
+
+.content__card-link:active {
+  background: #545050;
 }
